tests/machine/x/ocaml/group_by_multi_join_sort.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/group_by_multi_join_sort.ml", line 29, characters 78-81:
29 | let customer : record2 list = [{ c_custkey = 1; c_name = "Alice"; c_acctbal = 100; c_nationkey = 1; c_address = "123 St"; c_phone = "123-456"; c_comment = "Loyal" }]
                                                                                   ^^^
Error: This expression has type int but an expression was expected of type
         float
  Hint: Did you mean `100.'?


Context (around line 29):
  27 | 
  28 | let nation : record1 list = [{ n_nationkey = 1; n_name = "BRAZIL" }]
  29 | let customer : record2 list = [{ c_custkey = 1; c_name = "Alice"; c_acctbal = 100; c_nationkey = 1; c_address = "123 St"; c_phone = "123-456"; c_comment = "Loyal" }]
  30 | let orders : record3 list = [{ o_orderkey = 1000; o_custkey = 1; o_orderdate = "1993-10-15" };{ o_orderkey = 2000; o_custkey = 1; o_orderdate = "1994-01-02" }]
  31 | let lineitem : record4 list = [{ l_orderkey = 1000; l_returnflag = "R"; l_extendedprice = 1000; l_discount = 0.1 };{ l_orderkey = 2000; l_returnflag = "N"; l_extendedprice = 500; l_discount = 0 }]
